# clean-project

./: .gitignore  CMakeLists.txt  README.md
cpp/: .gitignore
cpp/tests/: myLibTest.cpp  test.cpp
cpp/visual-studio/: .gitignore
cpp/visual-studio/kata/: kata.vcxproj
cpp/visual-studio/kataLib/: kataLib.vcxproj  kataLib.vcxproj.filters
cpp/visual-studio/test/: test.vcxproj  test.vcxproj.filters
java/: build.gradle
javaScript/: package-lock.json  package.json
javaScript/src/: index.spec.js
src/: main.cpp  myLib.cpp  myLib.h
tests/: myLibTest.cpp
visual-studio/: kata.sln
visual-studio/kata/: kata.vcxproj
visual-studio/kataLib/: kataLib.vcxproj
visual-studio/test/: test.vcxproj
